--- a/src/app/input-form/input-form.component.html
+++ b/src/app/input-form/input-form.component.html
@@ -58,7 +58,7 @@
 						<input type="radio" class="form-check-input" name="imgResolutionOption" id="hiResolutionImages"
 							value="hiResolutionImages" formControlName="imgResolutionOption">
 						Load high resolution card images.<br>
-						<small>This can require a lot of data consumption (up to ~1.3 MB per image).</small>
+						<small class="text-info">This can require a lot of data consumption (up to ~1.3 MB per image).</small>
 					</label>
 				</div>
 			</div>
